questions: add questions responses